Changelog
=========

9.2-dev0 - (unreleased)
---------------------------

9.1 - (2019-11-21)
--------------------------
* Feature: Made all Dexterity content cache aware
  [avoinea refs #110155]
* Feature: Added support for Python 3 and Plone 5.2
  [alecghica refs #110155]

9.0 - (2019-06-06)
--------------------------
* Change: Cache decorator no longer caches empty results
  [ichim-david refs #104467]
* Feature: Cache decorator now has cache_empty parameter if it's set will
  still cache empty results
  [ichim-david refs #104467]

8.5 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

8.4 - (2018-06-13)
--------------------------
* Bug fix: lambda takes no arguments (1 given)
  [avoinea]

8.3 - (2018-06-06)
--------------------------
* Bug fix: Fix relatedItems cache invalidation
  [avoinea refs #95891]

8.2 - (2018-05-24)
-----------------------
* Bug fix: Speed-up cache invalidation for backward-references
  [avoinea refs #95020]
* Feature: replaced invalidate_cache method with a method that use eea.cache
  [alecghica refs #95020]
* Feature: "Refresh this page" method redirect you back to the original context
  [alecghica refs #95020]
* Feature: cache.settings if called in a context of a default view it will
  also invalidate its parent
  [alecghica refs #95020]
* Bug fix: fixed case under all invalidate methods when a broken relations
  is present and None is found instead of an object
  [alecghica refs #95020]

8.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

8.0 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

7.9 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

7.8 - (2017-05-15)
------------------