@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_actions">
+ <action-provider name="portal_actions"/>
+ <object name="object">
+   <object name="eea.cache" remove="True" />
+ </object>
+</object>
